--- a/package.json
+++ b/package.json
@@ -8,13 +8,24 @@
     "start": "node dist/server.js",
     "lint": "eslint",
     "insert-menu": "tsx app/scripts/insertMenuItem.ts",
-    "seed-data": "tsx app/scripts/insertMenuItem.ts"
+    "seed-data": "tsx app/scripts/insertMenuItem.ts",
+    "db:insert": "ts-node app/scripts/db/index.ts insert",
+    "db:insert:file": "ts-node app/scripts/db/index.ts insert -f ./data/menuItems.json",
+    "db:update": "ts-node app/scripts/db/index.ts update",
+    "db:update:file": "ts-node app/scripts/db/index.ts update -f ./data/updates.json",
+    "db:delete": "ts-node app/scripts/db/index.ts delete",
+    "db:delete:id": "ts-node app/scripts/db/index.ts delete -i \"64f8c2e2b8d1e5a1c2b3a4f7\"",
+    "db:delete:name": "ts-node app/scripts/db/index.ts delete -n \"Margherita Pizza\"",
+    "db:query": "ts-node app/scripts/db/index.ts query",
+    "db:query:vegetarian": "ts-node app/scripts/db/index.ts query -t vegetarian",
+    "db:query:available": "ts-node app/scripts/db/index.ts query -a"
   },
   "type": "commonjs",
   "dependencies": {
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.9",
     "bcryptjs": "^3.0.2",
+    "commander": "^14.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -32,6 +43,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^3.0.0",
+    "@types/commander": "^2.12.5",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
