Add authController.ts receiptController.ts supplierController.ts userController.ts / middleware: auth.ts / api: api/menu/:id, api/priceHistory/:id, api/auth, api/receipts, api/supplier.. / utils: db.ts, validation.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["node", "express", "jsonwebtoken"],
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -23,6 +25,12 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/scripts/insertMenuItem.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/scripts/insertMenuItem.ts"
+  ],
   "exclude": ["node_modules", "dist"]
 }
