--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "next": "15.5.2",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^4.1.4"
