add websocket server for real-time data, server/index.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/scripts/insertMenuItem.ts"
-  ],
+, "app/server/index.ts", "app/middleware/websocketNotifier.ts", "app/server.ts"  ],
   "exclude": ["node_modules", "dist"]
 }
