--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.3",
     "zod": "^4.1.4"
   },
